--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 <meta charset="UTF-8"> 
-<title>Seitentitel</title>
+<title>Test_Project_BySales</title>
 </head>
  
 <body>
-<h1>Erste Überschrift</h1>
+<h1>The Red Hat Sales Playbook</h1>
 <p>Dies ist ein Absatz.</p>
 </body>
 
